--- a/campaign/templates/components/header.html
+++ b/campaign/templates/components/header.html
@@ -1,9 +1,6 @@
 <header class="navbar border-b border-base-200 bg-base-100 px-6">
         <div class="navbar-start">
-            <button class="btn btn-ghost btn-square btn-sm mr-2">
-                <i class="fa-regular fa-clone text-gray-400 text-lg"></i>
-            </button>
-            <h1 class="text-xl font-bold text-gray-800">Instantly Copilot</h1>
+            <h1 class="text-xl font-bold text-gray-800">VibeReach</h1>
         </div>
         <div class="navbar-end">
             <div class="flex items-center gap-x-4">
