--- a/campaign/templates/components/nav.html
+++ b/campaign/templates/components/nav.html
@@ -5,6 +5,29 @@
     <!-- Logo -->
     <div class="inline-flex h-10 w-10 items-center justify-center rounded-lg bg-blue-600 text-white">
       <i class="fa-solid fa-bolt fa-lg"></i>
+      <!-- <svg width="345" height="120" viewBox="0 0 345 120" xmlns="http://www.w3.org/2000/svg">
+        <defs>
+          <linearGradient id="vibeGradient" x1="0%" y1="100%" x2="0%" y2="0%">
+            <stop offset="0%" stop-color="rgba(82, 32, 3, 1)" />
+            <stop offset="35%" stop-color="rgba(153, 109, 8, 1)" />
+            <stop offset="100%" stop-color="rgba(255, 64, 0, 1)" />
+          </linearGradient>
+
+          <g id="vibeShape">
+            <path fill-rule="evenodd" d="
+              M5,10 L75,10 L40,75 Z M20,22 L60,22 L40,52 Z /* V */
+              M85,10 L108,10 L108,110 L85,110 Z /* I */
+              M120,10 v100 h22 c35,0 35,-22.5 0,-45 h-5 c35,0 35,-22.5 0,-45 h-17z m20,10 h5 c15,0 15,15 0,25 h-5z m0,40 h10 c15,0 15,15 0,25 h-10z /* B */
+              M210,10 h70 v22 h-70z M210,49 h70 v22 h-70z M210,88 h70 v22 h-70z /* E */
+            "/>
+          </g>
+        </defs>
+
+        <use href="#vibeShape" fill="rgba(82, 32, 3, 1)" transform="translate(-2, 0)"/>
+        
+        <use href="#vibeShape" fill="rgba(255, 64, 0, 1)" transform="translate(2, 0)"/>
+        <use href="#vibeShape" fill="url(#vibeGradient)"/>
+      </svg> -->
     </div>
 
     <!-- Navigation Icons -->
